--- a/style.css
+++ b/style.css
@@ -18,5 +18,40 @@ body {
     position: relative;
     display: grid;
     grid-template: repeat(6, 120px) / 500px;
-    background: linear-gradient(rgb(6,6,122), rgb(101, 7, 145));
+    background: linear-gradient(rgb(6, 6, 122), rgb(101, 7, 145));
+}
+
+.localisation {
+    grid-area: 1/1/2/2;
+    border-bottom: 1px solid #f1f1f1;
+    color: #f1f1f1;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.temperature {
+    grid-area: 2/1/3/2;
+    color: #f1f1f1;
+    justify-self: center;
+    align-self: center;
+    font-size: 40px;
+    font-weight: 100;
+}
+
+.icone {
+    grid-area: 3/1/4/2;
+    justify-self: center;
+    align-self: center;
+
+}
+
+.description {
+    grid-area: 4/1/5/2;
+    color: #f1f1f1;
+    font-size: 30px;
+    font-weight: 100;
+    justify-self: center;
+    align-self: center;
 }
