--- a/style.css
+++ b/style.css
@@ -70,4 +70,12 @@ body {
 
 .iconePrevision {
     grid-area: 1/1/3/2;
+    justify-self: center;
+    align-self: center;
+}
+
+.joursSemaine {
+    text-align: center;
+    color: #f1f1f1;
+    grid-area:  3/1/4/2;
 }
