--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*, ::before, ::after {
     margin: 0;
     padding: 0%;
     box-sizing: border-box;
@@ -7,75 +7,90 @@
 
 body {
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: "cabin";
-
-}
-
-.grille {
-    position: relative;
-    display: grid;
-    grid-template: repeat(6, 120px) / 500px;
-    background: linear-gradient(rgb(6, 6, 122), rgb(101, 7, 145));
-}
-
-.localisation {
-    grid-area: 1/1/2/2;
-    border-bottom: 1px solid #f1f1f1;
     color: #f1f1f1;
-    font-size: 40px;
+    background: linear-gradient(45deg , rgb(59,50,50), rgb(22,28,29));
+
+}
+
+.container {
+    width: 800px;
+    height: 600px;
+    background: linear-gradient(45deg, #1068b6, #ec60a6);
+    display: grid;
+    grid-template: 100px 300px 100px 100px /repeat(8, 100px);
+    margin: 100px auto 0;
+    position: relative;
+    border: 1px solid #f1f1f1;
+}
+h1 {
+    grid-area: 1 / 1 / 2 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+.bloc-logo-info {
+    grid-area: 2 / 1 / 3 / -1 ;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.bloc-logo {
+    width: 50%;
+}
 
-.temperature {
-    grid-area: 2/1/3/2;
-    color: #f1f1f1;
-    justify-self: center;
-    align-self: center;
+.bloc-logo img {
+    width: 100%;
+    height: auto;
+}
+
+.bloc-info {
+    width: 50%;
+}
+
+.bloc-info .temp {
     font-size: 40px;
-    font-weight: 100;
+}
+.bloc-info .temps::first-letter {
+    text-transform: capitalize;
 }
 
-.icone {
-    grid-area: 3/1/4/2;
-    justify-self: center;
-    align-self: center;
-
+.bloc-info .temperature {
+    font-size: 60px;
 }
 
-.description {
-    grid-area: 4/1/5/2;
-    color: #f1f1f1;
-    font-size: 30px;
-    font-weight: 100;
-    justify-self: center;
-    align-self: center;
+.bloc-info .localisation {
+    font-size: 40px;
+    word-wrap: break-word;
 }
 
-.prevision {
-    grid-area: 6/1/7/2;
+.heure-bloc-prevision {
+    grid-area: 3 / 1 / 4 / -1 ;
+}
+.jour-prevision-bloc {
+    grid-area: 4 / 1 / 5 / -1 ;
+}
+
+.jour-prevision-bloc, .heure-bloc-prevision {
     display: grid;
-    grid-template: 100%/ repeat(6,71px) 74px;
+    grid-template: 100px / repeat(7, 1fr);
+}
+
+.bloc-h, .bloc-j {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     border-top: 1px solid #f1f1f1;
+    font-size: 20px;
 }
 
-.jours {
-    display: grid;
-    grid-template: repeat(3,33%) / 100%;
+.bloc-h:not(:last-child), .bloc-j:not(:last-child) {
+    border-right: 1px solid #f1f1f1;
 }
 
-.iconePrevision {
-    grid-area: 1/1/3/2;
-    justify-self: center;
-    align-self: center;
-}
-
-.joursSemaine {
-    text-align: center;
-    color: #f1f1f1;
-    grid-area:  3/1/4/2;
+.bloc-h p, .bloc-j p {
+    margin: 5px;
 }
