--- a/style.css
+++ b/style.css
@@ -94,3 +94,24 @@ h1 {
 .bloc-h p, .bloc-j p {
     margin: 5px;
 }
+
+.overlay-icone-chargement {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg , rgb(59,50,50), rgb(22,28,29));
+    transition: opacity 1.1s ease-out;
+    z-index: 99999;
+}
+
+.overlay-icone-chargement img {
+    width: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.disparition {
+    opacity: 0;
+}
